refactor: replacement methods improved with java21 to reduce verbosity.